[project]
name = "chart-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "redis==7.4.0",
    "httpx==0.28.1",
    "websockets==16.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "orjson==3.11.8",
    "structlog==25.5.0",
    "email-validator==2.3.0",
    "slowapi==0.1.9",
    "python-dotenv==1.1.0",
    "psycopg2-binary==2.9.10",
    # 차트 계산 / 지표 / 백테스트 (src/services, src/api에서 31곳 사용).
    # 이전에는 pytorch transitive로 우연히 설치되었으나, Render 엄격 빌드에서
    # 누락이 드러나 명시 선언 추가.
    "numpy==2.2.6",
    "pandas==2.3.3",
    # Admin 비번 bcrypt 직접 호출 (src/api/auth.py).
    # passlib[bcrypt]가 transitive로 포함하나 직접 import 경로가 존재하므로 명시.
    "bcrypt==4.3.0",
    # 런타임 선택 의존성 — 있어야 장애 없음 (감사 보고서 1.4).
    # psutil: src/api/ops/ops.py (시스템 메트릭)
    # brotli: src/middleware/brotli.py (응답 압축, optional import)
    # sentry-sdk: src/main.py (SENTRY_DSN 설정 시 로드)
    "psutil>=5.9,<7.0",
    "brotli>=1.0,<2.0",
    "sentry-sdk>=2.0,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-playwright>=0.7", "playwright>=1.40", "httpx>=0.27", "ruff>=0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E701", "E702", "E712", "E741", "E402", "F841"]  # 프로젝트 스타일 허용
