[project]
name = "chart-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Runtime (FastAPI + DB + auth + WebSocket + LLM HTTP client)
    "fastapi==0.136.1",
    "uvicorn[standard]>=0.27,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "redis==7.4.0",
    "httpx==0.28.1",
    "websockets==16.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt==3.2.2",
    "orjson==3.11.8",
    "structlog==25.5.0",
    "email-validator==2.3.0",
    "slowapi==0.1.9",
    "python-dotenv>=1.0,<2.0",

    # Data / ML
    "numpy==2.4.4",
    "pandas==3.0.2",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",

    # 선택 (백테스트/튜닝)
    "deap==1.4.3",
    "optuna==4.8.0",

    # 런타임 선택 의존성
    "brotli==1.2.0",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.7",
    "playwright>=1.40",
    "httpx>=0.27",
    "requests>=2.32",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E701", "E702", "E712", "E741", "E402", "F841"]  # 프로젝트 스타일 허용
